# BevyGame

./: Cargo.toml  Pseudocode  README.md
assets/scenes/: load_scene_example.scn
assets/textures/groundTextures/: groundTexture.piskel
assets/textures/rpg/chars/gabe/: gabe-idle-gun.piskel
crates/game-UI/: Cargo.toml
crates/game-UI/src/: lib.rs
crates/game-ai/: Cargo.toml
crates/game-ai/src/: lib.rs
crates/game-core/: Cargo.toml
crates/game-core/src/: lib.rs
crates/game-entities/: Cargo.toml
crates/game-entities/src/: lib.rs
crates/game-input/: Cargo.toml
crates/game-input/src/: lib.rs
crates/game-scenes/: Cargo.toml
crates/game-scenes/src/: lib.rs
crates/game-sprites/: Cargo.toml
crates/game-world/: Cargo.toml
crates/game-world/src/: lib.rs
src/: main.rs
src/scenes/: scene.scn
