[package]
name = "bevy_example"
version = "0.1.0"
authors = ["Brent Harris <bdharris3@uh.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*"
]


[dependencies]
bevy = "0.4.0"
rand = "0.8.3"


#local crates

game-ai = {path = "crates/game-ai", version = "0.1.0"}
game-core = {path = "crates/game-core", version = "0.1.0"}
game-entities = {path = "crates/game-entities", version = "0.1.0"}
game-input = {path = "crates/game-input", version = "0.1.0"}
game-sprites = {path = "crates/game-sprites", version = "0.1.0"}
game-scenes = {path = "crates/game-scenes", version = "0.1.0"}
game-world = {path = "crates/game-world", version = "0.1.0"}
game-UI = {path = "crates/game-UI", version = "0.1.0"}