[package]
name = "game-input"
version = "0.1.0"
authors = ["Brent Harris <bdharris3@uh.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0"
game-core = {path = "../game-core"}
game-entities = {path = "../game-entities"}